--- a/flow/build.gradle
+++ b/flow/build.gradle
@@ -51,3 +51,36 @@ dependencies {
 //  implementation "com.android.support:appcompat-v7:27.0.0"
     implementation "com.android.support:recyclerview-v7:27.1.1"
 }
+
+
+
+//def _BASENAME = "flow";
+//def _VERSION = "1.0";
+//def _DestinationPath = "build"; //生成jar包的位置
+//def zipFile = file('build/intermediates/bundles/default/classes.jar'); //待打包文件位置
+
+//task deleteBuild(type:Delete){
+//    delete _DestinationPath + _BASENAME + _VERSION + ".jar"
+//}
+//
+//task makeJar(type:Jar){
+//    from zipTree(zipFile)
+//    from fileTree(dir:'src/main',includes:['assets/**']) //将assets目录打入jar包
+//    baseName = _BASENAME + "-" + _VERSION
+//    destinationDir = file(_DestinationPath)
+//}
+//
+//makeJar.dependsOn(deleteBuild, build)
+
+task deleteJar(type: Delete) {
+    delete 'libs/jars/logmanagementlib.jar'
+}
+
+task createJar(type: Copy) {
+    from('build/intermediates/bundles/release/')
+    into('libs/jars/')
+    include('classes.jar')
+    rename('classes.jar', 'logmanagementlib.jar')
+}
+
+createJar.dependsOn(deleteJar, build)
